metodos criados: Post,Patch,Delete,Update
