# src/Models/TaskModel.ts
@@ -1,15 +1,24 @@
 import mongoose from "mongoose";
 
+
+
 const taskSchema = new mongoose.Schema({
     status: {
         type: String,
-        required: true
+        required: false,   
     },
     description: {
         type: String,
         required: true
+    },
+    createdAt:  {
+        type: Date,
+        required: false,
+    },
+    updatedAt:  {
+        type: Date,
+        required: false,
     }
-
 })
 
 export const TaskModel = mongoose.model("Task", taskSchema);
